Add `ListWrapper#mapped` and `ListWrapper#filtered` method to easily map and filter a wrapped `List`